// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SkipLink > should match the snapshot 1`] = `
[
  <a
    class="nhsuk-skip-link"
    data-testid="skip-link"
    href="#maincontent"
  >
    Skip to main content
  </a>,
]
`;

exports[`SkipLink > should render the correct href and content 1`] = `
<a
  class="nhsuk-skip-link"
  data-testid="skip-link"
  href="#maincontent"
>
  Skip to main content
</a>
`;
